--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "npm": "^11.6.2",
