--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.9",
+    "joi": "^18.0.1",
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
