--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
