--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.9",
     "joi": "^18.0.1",
+    "jwt-decode": "^4.0.0",
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
