--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
